# rescom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
cmake/: CMakeLists.txt
compiler/: CMakeLists.txt  CodeGenerator.cpp  Compiler.cpp  Compiler.hpp  Configuration.cpp  Configuration.hpp  Strings.hpp  main.cpp
sources/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  Configuration.cpp  Configuration.hpp  ConfigurationParser.cpp  ConfigurationParser.hpp  FileSystem.cpp  FileSystem.hpp  GeneratedConstants.hpp.in  LegacyCppCodeGenerator.cpp  LegacyCppCodeGenerator.hpp  NaiveCppGenerator.cpp  NaiveCppGenerator.hpp  RescomFileParser.cpp  RescomFileParser.hpp  StringHelpers.cpp  StringHelpers.hpp  main.cpp
tests/: CMakeLists.txt
tests/binary_resources/: CMakeLists.txt  main.cpp
tests/binary_resources/resources/: files.rescom
tests/empty_project_test/: CMakeLists.txt  main.cpp
tests/functional_tests/: CMakeLists.txt
tests/functional_tests/binary_resources/: CMakeLists.txt  main.cpp
tests/functional_tests/comments/: CMakeLists.txt  main.cpp
tests/functional_tests/comments/resources/: files.rescom  test2.txt
tests/functional_tests/duplicate_tests/: CMakeLists.txt  main.cpp
tests/functional_tests/empty_project_test/: CMakeLists.txt  main.cpp
tests/functional_tests/legacy_cpp_generator/duplicate_tests/resources/: files.rescom
tests/functional_tests/legacy_cpp_generator/non_empty_tests/: CMakeLists.txt
tests/functional_tests/legacy_cpp_generator/non_empty_tests/resources/: files.rescom
tests/functional_tests/naive_cpp_generator/: CMakeLists.txt
tests/functional_tests/naive_cpp_generator/comments_tests/: main.cpp
tests/functional_tests/naive_cpp_generator/empty_tests/: main.cpp
tests/functional_tests/non_empty_tests/: CMakeLists.txt  main.cpp
tests/functional_tests/non_empty_tests/resources/sub/: test.txt
tests/functional_tests/non_recursive/: CMakeLists.txt  main.cpp
tests/functional_tests/non_recursive/resources/: files.rescom
tests/functional_tests/non_recursive/resources/dir1/recursive/: test.txt
tests/functional_tests/only_text_resources/: CMakeLists.txt  main.cpp
tests/functional_tests/resource_directory/: CMakeLists.txt  main.cpp
tests/functional_tests/resource_directory/resources/: files.rescom  test.txt
tests/functional_tests/resource_directory/resources/recursive/: test.txt
tests/functional_tests/resource_directory/resources/sub sub/: test.txt
tests/only_text_resources/: main.cpp
tests/project_test/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt  ConfigurationTests.cpp  RescomFileParserTests.cpp  StringsTest.cpp
