add_executable(unit_tests main.cpp StringsTest.cpp)
target_link_libraries(unit_tests PRIVATE Catch2::Catch2WithMain)
target_include_directories(unit_tests PRIVATE ${PROJECT_SOURCE_DIR}/compiler)
set_target_properties(unit_tests PROPERTIES CXX_STANDARD 20 CXX_EXTENSIONS ON CXX_STANDARD_REQUIRED ON)
add_test(NAME unit_tests COMMAND unit_tests)