add_executable(binary_resources_test main.cpp ../../unit_tests/main.cpp)
add_test(NAME binary_resources_test COMMAND binary_resources_test)
target_link_libraries(binary_resources_test PRIVATE Catch2::Catch2WithMain)
set_target_properties(binary_resources_test PROPERTIES CXX_STANDARD 20 CXX_EXTENSIONS ON CXX_STANDARD_REQUIRED ON)
rescom_compile(binary_resources_test ${CMAKE_CURRENT_SOURCE_DIR}/resources/files.rescom)
